# dc-runner-rust

./: .gitignore  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  dc-runner-rust-darwin-arm64  dc-runner-rust-darwin-x86_64  dc-runner-rust-linux-x86_64  runner_adapter.sh
.github/workflows/: ci.yml  release-please.yml  release.yml
dc-runner-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
dc-runner-cli/src/: governance.rs  job_helpers.rs  main.rs  migrators.rs  spec_source.rs
dc-runner-cli/tests/: cli_contract.rs
docs/: architecture.md  commands.md  compatibility.md  install.md  release.md
docs/book/: 90_reference_guide.md  index.md  reference_manifest.yaml
scripts/: dc-runner-rust  emit_runner_status_report.sh  sync_data_contracts_specs.sh  sync_runner_specs.sh  verify_runner_specs.sh  verify_upstream_compat.sh
spec_runner_cli/: Cargo.toml  README.md
spec_runner_cli/src/: governance.rs  job_helpers.rs  main.rs  migrators.rs  profiler.rs  service_registry.rs  spec_lang.rs
spec_runner_cli/src/app/: dispatch.rs  entry.rs  mod.rs
spec_runner_cli/src/cli/: args.rs  errors.rs  help.rs
spec_runner_cli/src/domain/: command_map.rs  refs.rs
spec_runner_cli/src/infra/: process.rs
spec_runner_cli/src/ports/: process.rs
spec_runner_cli/src/service_runtime/: mod.rs  plugin_host.rs
spec_runner_cli/src/services/: mod.rs  specs_ui.rs
spec_runner_cli/tests/: cli_contract.rs
specs/: index.md
specs/02_contracts/: 10_docs_quality.md
specs/impl/: index.md
xtask/: Cargo.toml
xtask/src/: compat.rs  constants.rs  error.rs  git.rs  lockfile.rs  main.rs  manifest.rs  output.rs  runner_spec_registry.rs
xtask/src/cli/: args.rs
xtask/src/commands/: build.rs  compat.rs  mod.rs  runner_spec.rs  smoke.rs  spec.rs  test.rs  verify.rs
xtask/src/sync/: mod.rs
xtask/tests/: cli.rs
xtask/tests/golden/: help_top_level.txt
(+1346 files in other folders)
