[package]
name = "dc_runner_cli"
version = "0.2.0"
edition = "2021"
description = "Required Rust runner lane for Data Contracts."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jonruttan/dc-runner-rust"
homepage = "https://github.com/jonruttan/dc-runner-rust"
documentation = "https://docs.rs/dc_runner_cli"
keywords = ["data-contracts", "runner", "cli"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.74"

[[bin]]
name = "dc-runner"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.26"
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock"] }
