[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "=1.0.86"
chrono = { version = "=0.4.38", features = ["clock"] }
clap = { version = "=4.5.7", features = ["derive"] }
globset = "=0.4.14"
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "=1.0.117"
serde_yaml = "=0.8.26"
sha2 = "=0.10.8"
tempfile = "=3.10.1"
walkdir = "=2.5.0"

[dev-dependencies]
assert_cmd = "=2.0.14"
predicates = "=3.1.0"
